Model now trained and deployed from web

--- a/trainer/Dockerfile
+++ b/trainer/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8-jre-slim
-ADD target/dist/lib /libs
-ADD target/dist/conf /conf
-ADD target/dist/Trainer.jar app.jar
-ENTRYPOINT ["java", "-cp", "/libs/*:/conf/:app.jar", "com.dyptan.TrainerGateway"]
+ADD target/dist/lib /trainer/libs
+ADD target/dist/trainer.properties /trainer/conf
+ADD target/dist/Trainer.jar /trainer/bin/
+WORKDIR /trainer/
+ENTRYPOINT ["java", "-cp", "libs/*:conf/:bin/Trainer.jar", "com.dyptan.TrainerLauncher"]
 EXPOSE 8081
