--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -34,3 +34,6 @@ elasticsearch.service.port=9200
 management.endpoints.web.exposure.include=*
 
 trainer.endpoint=http://trainer:8081/api
+
+grpc.client.streamerGateway.negotiationType=PLAINTEXT
+grpc.client.streamerGateway.address=static://streamer:8082
