--- a/trainer/src/main/resources/trainer.properties
+++ b/trainer/src/main/resources/trainer.properties
@@ -4,8 +4,7 @@ es.nodes=elasticsearch
 es.nodes.wan.only=true
 es.port=9200
 es.resource=olxua/cars
-model.path=/mnt/model/trainedModel/
-
+model.path=/mnt/model/
 spark.driver.bindAddress=localhost
 spark.driver.memory=800M
 spark.master=local
